Version 2.0
~~~~~~~~~~~
* Jumped because in the mean-time difx-1.5 branch had gone to 1.1
* Includes the following corrections merged in from the 1.5 branch
  - Zero length scans are ignored
  - Warn if no clock values are applied on a job/antenna basis
  - oms2v2d: correct use of POLARIZATION
  - oms2v2d: respect TWEAK_INT_TIME parameter
  - oms2v2d: trap missing FFT_SIZE and SPECTRAL_AVERAGE parameters
* Also bugfixes related to variable initialisation
* Adds support for multiple phase centres
* Requires difxio 3.0
* Add support for VLBN "format" -- that is VLBA with no data modulation
* Use strict parsing by default
* Add deltaClock and deltaClockRate
* More user warnings
* Further fix to generated flags when an antenna is not in a job
* oms2v2d: trap missing FFT_SIZE and SPECTRAL_AVERAGE parameters
* Actually respect clock breaks!
* Fix some logic to avert some unneeded warnings

Version 0.3
~~~~~~~~~~~
* Post DiFX-1.5
* Mark5B support
* format override support
* Pulsar profile mode

Version 0.2
~~~~~~~~~~~
* Make several classes subclasses of VexInterval to simplify things
* Compute "Computational load" -- an estimate of the number of numerical operations required.
* Initial (untested) support for ephemeris-driven targets
* Estimate output data size / allow job splitting based on job size
* Version for DiFX-1.5

Version 0.1
~~~~~~~~~~~
* simplified difx input file output
* add SOURCE blocks to .v2d files
* allow colon separated RAs and Decs in the config file
* implement ANTENNA blocks
* write SCAN_GAP scans instead of no scans 
* start time and stop time are no longer expanded to full length of all included scans
* write flag file that is compliant with difx2fits
* add oms2v2f to this package
* implement maxLength (seconds)
* don't allow white-space separated lists

Version 0.0
~~~~~~~~~~~
* Initial version